fix: h2 divider not showing

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-h2::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--foreground);
-    @apply w-full my-2;
-}
-
 img {
     @apply rounded-lg;
 }
@@ -103,6 +94,15 @@ h1 {
 
 h2 {
     @apply text-2xl font-bold;
+}
+
+h2::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(var(--foreground));
+    @apply w-full my-2;
 }
 
 h3 {
